modify index.html & script.js

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
           <div class="form-group">
             <label for="tip">Select Tip %</label>
             <div class="tip-wrapper">
-              <button type="button" id="select-tip" value="5%">5%</button>
-              <button type="button" id="select-tip" value="10%">10%</button>
-              <button type="button" id="select-tip" value="15%">15%</button>
-              <button type="button" id="select-tip" value="25%">25%</button>
-              <button type="button" id="select-tip" value="50%">50%</button>
-              <div class="input-wrapper" id="select-tip">
+              <button type="button" class="select-tip" value="5">5%</button>
+              <button type="button" class="select-tip" value="10">10%</button>
+              <button type="button" class="select-tip" value="15">15%</button>
+              <button type="button" class="select-tip" value="25">25%</button>
+              <button type="button" class="select-tip" value="50">50%</button>
+              <div class="input-wrapper" class="select-tip">
                 <input type="text" id="custom-tip" inputmode="decimal" pattern="[0-9]*[.,]?[0-9]*" placeholder="Custom">
               </div>
               <p class="tip-msg">Please input max 100</p>
